--- a/clickcounter.html
+++ b/clickcounter.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
-            background-color: #f4f4f4; /* Light gray background */
+            background-color: #f4f4f4; 
         }
         .container {
             background: white;
@@ -22,7 +22,7 @@
             padding: 12px 24px;
             font-size: 18px;
             cursor: pointer;
-            background-color: #4CAF50; /* Green button */
+            background-color: #4CAF50; 
             color: white;
             border: none;
             border-radius: 5px;
@@ -47,16 +47,14 @@
     </div>
 
     <script>
-        let counter = 0; // Variable to store the count
+        let counter = 0; 
 
-        // Select the button and count display elements
         const button = document.getElementById("clickButton");
         const countDisplay = document.getElementById("count");
 
-        // Add event listener to the button
         button.addEventListener("click", function() {
-            counter++; // Increase count
-            countDisplay.textContent = counter; // Update displayed count
+            counter++;
+            countDisplay.textContent = counter;
         });
     </script>
 </body>
